@@ -54,14 +54,14 @@
  </action>
  <action i18n:domain="plone" title="Exports" action_id="resource_export" category="object" condition_expr=""
     url_expr="string:${object_url}/reservation-exports" visible="True" i18n:attributes="title">
-  <permission value="Modify portal content"/>
+  <permission value="seantis.reservation: View Reservations"/>
  </action>
  <action i18n:domain="plone" title="Monthly Report" action_id="monthly_report" category="object" condition_expr=""
     url_expr="string:${object_url}/monthly_report" visible="True" i18n:attributes="title">
-  <permission value="Modify portal content"/>
+  <permission value="seantis.reservation: View Reservations"/>
  </action>
  <action i18n:domain="plone" title="Latest Reservations" action_id="latest_reservations" category="object" condition_expr=""
     url_expr="string:${object_url}/latest_reservations" visible="True" i18n:attributes="title">
-  <permission value="Modify portal content"/>
+  <permission value="seantis.reservation: View Reservations"/>
  </action>
 </object>
