@@ -5,6 +5,10 @@ Changelog
 1.1.5 (unreleased)
 ------------------
 
+- Changes export/report/latest permissions on the actions to reflect the
+  actual permissions needed to open these views. Fixes #164.
+  [href]
+
 - Fixes last day not being included in the monthlry report. Closes #163.
   [href]
 
